erDiagram
  %% See docs/models_plan.md for the reasoning behind these choices:
  %% - SCORE <-> LITURGICAL_OCCASION is a through-table (many-to-many)
  %% - COMMENT's link to TERM/SERVICE/ROLE_PIECE is one polymorphic
  %%   GenericForeignKey in Django, shown here as three edges since
  %%   erDiagram syntax can't express "one FK, any of three tables"
  %% - Role templates are seeded in code, not modelled as a table
  USER ||--o{ COMMENT : writes
  TERM ||--o{ SERVICE : contains
  LITURGICAL_OCCASION ||--o{ SERVICE : occurs_on
  SERVICE ||--o{ SERVICE_ROLE : has
  SERVICE_ROLE ||--o{ ROLE_PIECE : holds
  SCORE ||--o{ ROLE_PIECE : referenced_by
  SCORE }o--o{ LITURGICAL_OCCASION : suits
  TERM ||--o{ COMMENT : about
  SERVICE ||--o{ COMMENT : about
  ROLE_PIECE ||--o{ COMMENT : about

  USER {
    string name
    string role
  }
  TERM {
    string name
    date start_date
    date end_date
  }
  SERVICE {
    date date
    string service_type
    string status
  }
  SERVICE_ROLE {
    string role_name
    string status
  }
  ROLE_PIECE {
    string status
  }
  SCORE {
    string title
    string composer_surname
    string composer_other_names
    string voicing
    string language
    int copies_owned
    string filing_location
  }
  LITURGICAL_OCCASION {
    string name
    string tradition
    string date_rule
  }
  COMMENT {
    string author
    string body
    string status
  }